--- a/Typescript/index.html
+++ b/Typescript/index.html
@@ -1,6 +1,6 @@
 <html>
     <body>
         <h5>Lets talk Ts</h5>
-        <script src="app.js"></script>
+        <script src="./built/app.js"></script>
     </body>
 </html>
